--- a/src/Portfolio.Net/Views/Home/About.cshtml
+++ b/src/Portfolio.Net/Views/Home/About.cshtml
@@ -1,5 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{ 
+    ViewData["Title"] = "About Brittany Rausch";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h2>About Brittany Rausch</h2>
