--- a/src/Portfolio.Net/Views/Home/Projects.cshtml
+++ b/src/Portfolio.Net/Views/Home/Projects.cshtml
@@ -1,5 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{ 
+    ViewData["Title"] = "Brittany Rausch Projects Page";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<h2>This is the Projects Page</h2>
