Create the css styles

--- a/src/Portfolio.Net/Views/Home/About.cshtml
+++ b/src/Portfolio.Net/Views/Home/About.cshtml
@@ -3,4 +3,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>About Brittany Rausch</h2>
+<h2>Bio</h2>
+
+<p class="aboutP">I'm currently learning to program at Epicodus in Portland, Or. I enjoy both front-end and back-end development, and as a life long learner I am eager to expand my knowledge in all areas. In fact, one of the reasons I decided to learn coding is that it's a perfect blend of logic and creativity. I'm excited to be a programmer, to be challenged, to learn and to start my new career.</p>
