--- a/src/Portfolio.Net/Views/Home/Index.cshtml
+++ b/src/Portfolio.Net/Views/Home/Index.cshtml
@@ -3,8 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Brittany Rausch</h2>
-<br />
-@Html.ActionLink("Projects", "Projects")
-<br />
-@Html.ActionLink("About", "About")
+<h1>Welcome</h1>
+<hr />
+<h3>@Html.ActionLink("Projects", "Projects")</h3>
+<h3>@Html.ActionLink("About", "About")</h3>
