--- a/src/Portfolio.Net/Views/Home/Projects.cshtml
+++ b/src/Portfolio.Net/Views/Home/Projects.cshtml
@@ -3,25 +3,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>This is the Projects Page</h2>
-
 @model IEnumerable<Portfolio.Net.Models.Starred>
 
-<h2>Starred Repos</h2>
+<h2>Top Starred Github Repositories</h2>
 <hr />
-<ol>
+
 
 
     @foreach (var repo in Model.Take(3))
     {
-        <li>
-            <ul>
-                <li>Name: @Html.DisplayFor(modelItem =>repo.Name)</li>
-                <li>Url: @Html.DisplayFor(modelItem => repo.Html_url)</li>
-                <li>Starred Count: @Html.DisplayFor(modelItem => repo.Stargazers_count)</li>
-            </ul>
-        </li>
-    }
-</ol>
 
-@Html.ActionLink("Back home", "Index")
+                <p>Name: <a href="@repo.Html_url">@Html.DisplayFor(modelItem => repo.Name)</a></p>
+                <p>Starred Count: @Html.DisplayFor(modelItem => repo.Stargazers_count)</p>
+
+        <hr />
+    }
+
